# comic-book-maker

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
.github/workflows/: ci.yml  release.yml
.scratch/mvp/: PRD.md
.scratch/ui-ux-overhaul/: PRD.md
app/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/integration_test/: app_test.dart
app/lib/: comic_book_maker_app.dart  main.dart
app/linux/: CMakeLists.txt
app/rust_builder/: pubspec.yaml
app/rust_builder/rust/: .gitignore  Cargo.toml
app/rust_builder/rust/src/: comicinfo.rs  cover_thumbnail.rs  epub_format.rs  export_cb7.rs  export_cbr.rs  export_cbz.rs  export_epub.rs  export_pdf.rs  export_presentation.rs  frb_generated.rs  import_cbr.rs  import_cbz.rs  import_metadata_snapshot.rs  lib.rs  natural_sort.rs  page_image.rs  paths.rs  pdf_format.rs  published_date.rs
app/rust_builder/rust/src/api/: export.rs  metadata.rs  simple.rs
app/rust_builder/rust/src/db/: cover.rs  facade.rs  import_commit.rs  library.rs  metadata.rs  migrate.rs  mod.rs  project_reset.rs  project_title.rs  projects.rs  records.rs  schema.rs  storage.rs  tests.rs
app/rust_builder/rust/src/import/: cb7.rs  cbr.rs  cbz.rs  epub.rs  metadata.rs  mod.rs  orchestration.rs  pdf.rs  staging.rs  types.rs
app/rust_builder/rust/src/metadata_schema/: mod.rs  view.rs
app/test/: app_blocking_loading_test.dart  (+74 more)
core/: Cargo.toml
docs/: README.md  release.md
scripts/: check-frb-ui-isolation.ps1  check-frb-ui-isolation.sh  generate-frb.ps1  seed-library-benchmark.ps1  setup-rust-junction.ps1
(+401 files in other folders)
